--- a/kimzusik/templates/main.html
+++ b/kimzusik/templates/main.html
@@ -47,7 +47,7 @@
                     <div>
                         <div class="" style="text-align: center; font-size: 13px; margin-top: 14px; font-weight: 700;">
                             csv 파일
-                            <a href=""><img src="static/image/excel.png" alt="excel" style="width: 20px; padding-bottom: 5px;"></a>
+                            <a href="/kimzusik/download?path=files/{{main.csv_file}}"><img src="static/image/excel.png" alt="excel" style="width: 20px; padding-bottom: 5px;"></a>
                             업로드 양식    
                         </div>
                         <div class="filebox" style="margin-top: 42px;">
