--- a/kimzusik/static/css/main.css
+++ b/kimzusik/static/css/main.css
@@ -31,7 +31,7 @@
     border: 1px solid #adadad94;
     border-radius: 6px;
     height: fit-content;
-    min-height: 50rem;
+    min-height: fit-content;
 }
 
 .logo_box{
@@ -40,6 +40,7 @@
 }
 
 .filebox label {
+    margin: 0;
     display: inline-block;
     color: #fff;
     vertical-align: middle;
@@ -48,10 +49,10 @@
     border: 1px solid #ebebeb;
     border-bottom-color: #e2e2e2;
     border-radius: 6px;
-    width: 8rem;
+    width: 7em;
     height: 35px;
     text-align: center;
-    margin: 0px 44px 3px 44px;
+    /* margin: 0px 44px 3px 44px; */
     padding: 0;
     line-height: 33px;
     font-size: 13px;
@@ -71,6 +72,14 @@
     overflow: hidden;
     clip:rect(0,0,0,0);
     border: 0;
+}
+
+.loading{
+  width: 5em;
+  margin: 0px 5px;
+  height: 35px;
+  font-size: 13px;
+  font-weight: bold;
 }
 
 a.button {
