--- a/kimzusik/templates/main.html
+++ b/kimzusik/templates/main.html
@@ -8,12 +8,14 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <!--<link rel="stylesheet" href="static/css/main.css">-->
 </head>
 <body>
-    <div class="container main_container">
+    <div class="container main_container" style="font-family: 'Gothic A1', sans-serif;">
         <header class="d-flex main_header col-10 m-auto mt-4">
             <div class="col-7">
                 <h2 style="font-weight: bold; margin-bottom: 17px;" >
@@ -53,7 +55,7 @@
                             <div class="col-12 d-flex mb-2" style="padding: 0px 15px; justify-content: center;">
                                 <label for="upload_file" style="margin: 0;">업로드</label>
                                 <input type="file" id="upload_file" accept=".csv" name="upload_file"> 
-                                <button class="btn btn-primary loading">실행</button>
+                                <button class="btn btn-primary loading" id="loading_button">실행</button>
                             </div>
                         </div>
                         <div class='file_text'>
@@ -65,7 +67,7 @@
                     </div> -->
                 </div>
                 <div class="feedback_box">
-                    <p style="font-weight: bold; margin-top: 24px; font-size: 20px;">
+                    <p style="font-weight: bold; margin-top: 24px; font-size: 20px;" class="col-12">
                         FeedBack
                     </p>
                     <div style="font-size: 11px;">
@@ -80,32 +82,187 @@
                 <div class="statics col-12">
                     <div class="col-11 static_box" style="text-align: start; padding: 15px 0px;">
                         <p style="font-size: 18px; font-weight: bold;">
-                            주의할 점
+                            <span>주의할 점</span>
                         </p>
                         <div>
                             <span class="warning_text">
-                                종가매매를 원칙으로 하는 계산입니다.
+                                <span class="leading_text" style="">종가매매</span>를 원칙으로 하는 계산입니다.
                             </span>
                             <br>
                             <span class="warning_text">
-                                분석 데이터는 최소 15개 이상을 추천드립니다.
+                                분석 데이터는 최소 <span class="leading_text">15개</span> 이상을 추천드립니다.
                             </span>
                             <br>
                             <span class="warning_text">
-                                과도한 데이터 개수로 분석 시 1시간 이상 소요될 수 있습니다.
+                                과도한 데이터 개수로 분석 시 <span class="leading_text">1시간 이상</span> 소요될 수 있습니다.
                             </span>
                             <br>
                             <span class="warning_text">
-                                과거 데이터를 기반으로 한 분석이므로 투자 참고용으로만 사용을 권장드립니다.
+                                과거 데이터를 기반으로 한 분석이므로 <span class="leading_text">
+                                    투자 참고용</span>으로만 사용을 권장드립니다.
                             </span>
                         </div>
                         
                     </div>
                 </div>
                 <div class="statics col-12">
-                    test
+                    <div class="d-flex mx-2 pt-3 pb-3" style="justify-content: center;">
+                        <div class="col-2" style="">
+                            <div class="title_info">
+                                총 종목 수
+                            </div>
+                            <div class="sub_info">
+                                <span id="length">??</span><span style="font-size: 18px; padding-left: 8px;">EA</span>
+                            </div>
+                        </div>
+                        <div class="col-2" style="">
+                            <div class="title_info">
+                                승률
+                            </div>
+                            <div class="sub_info">
+                                <span id="win_percentage">??</span><span style="font-size: 18px; padding-left: 8px;">%</span>
+                            </div>
+                        </div>
+                        <div class="col-1" style="">
+                        </div>
+                        <div class="col-2" style="">
+                            <div class="title_info">
+                                다음 날
+                            </div>
+                            <div>
+                                <div class="d-flex explain_box">
+                                    <div class="col-4 explain_text">
+                                        최대 수익
+                                    </div>
+                                    <div class="col-4 explain_prct">
+                                        80<span style="font-size: 13px; padding-left: 4px;">%</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="d-flex explain_box">
+                                    <div class="col-4 explain_text">
+                                        최대 손실
+                                    </div>
+                                    <div class="col-4 explain_prct">
+                                        -80<span style="font-size: 13px; padding-left: 4px;">%</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-2" style="">
+                            <div class="title_info">
+                                7일 후
+                            </div>
+                            <div>
+                                <div class="d-flex explain_box">
+                                    <div class="col-4 explain_text">
+                                        최대 수익
+                                    </div>
+                                    <div class="col-4 explain_prct">
+                                        80<span style="font-size: 13px; padding-left: 4px;">%</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="d-flex explain_box">
+                                    <div class="col-4 explain_text">
+                                        최대 손실
+                                    </div>
+                                    <div class="col-4 explain_prct">
+                                        -80<span style="font-size: 13px; padding-left: 4px;">%</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-2" style="">
+                            <div class="title_info">
+                                14일 후
+                            </div>
+                            <div>
+                                <div class="d-flex explain_box">
+                                    <div class="col-4 explain_text">
+                                        최대 수익
+                                    </div>
+                                    <div class="col-4 explain_prct">
+                                        80<span style="font-size: 13px; padding-left: 4px;">%</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="d-flex explain_box">
+                                    <div class="col-4 explain_text">
+                                        최대 손실
+                                    </div>
+                                    <div class="col-4 explain_prct">
+                                        -80<span style="font-size: 13px; padding-left: 4px;">%</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
+                <div class="statics col-12" style="max-height: fit-content; padding: 15px 0px;">
+                    <div class="d-flex mx-4 pt-3 pb-3 mb-2" style="justify-content: space-evenly;">
+                        <div class="col-3" style="">
+                            <div class="title_info">
+                                추천 손절 라인
+                            </div>
+                            <div class="recommend_info">
+                                1.5<span class="recommend_txt">%</span>
+                            </div>
+                            <div class="sub_recommend"  style="background: #c56565;">
+                                100<span>%</span> 전량 매도
+                            </div>
+                        </div>
+                        <div class="col-3" style="">
+                            <div class="title_info">
+                                1차 분할 매도
+                            </div>
+                            <div class="recommend_info">
+                                12<span class="recommend_txt">EA</span>
+                            </div>
+                            <div class="sub_recommend">
+                                80<span>%</span> 분할 매도
+                            </div>
+                        </div>
+                        <div class="col-3" style="">
+                            <div class="title_info">
+                                최종 분할 매도
+                            </div>
+                            <div class="recommend_info">
+                                12<span class="recommend_txt">EA</span>
+                            </div>
+                            <div class="sub_recommend"  style="background: #c56565;">
+                                100<span>%</span> 전량 매도
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="statics col-12" style=>
+                    <div class="img_box" id='chart1'>
+                        <div style="text-align: start;
+                        padding: 0px 20px;
+                        padding-top: 12px;
+                        padding-bottom: 5px;
+                        font-weight: bold;
+                        font-size: 18px;
+                        color: #545454;
+                        box-shadow: 0px 2px 7px 0px #c0cad9;">
+                            수익률 차트
+                        </div>
+                        <div class="img_txt">
+                            분석 종목 수익 분포도
+                        </div>
+                        <img class="imgs" src="static/image/test.png" alt="">
+                    </div>
+                    <div class="img_box" id='chart2'>
+                        <div class="img_txt">
+                            보유 종목 수익 선 그래프
+                        </div>
+                        <img class="imgs" src="static/image/rename.png" alt="">
+                    </div>
+                </div>
             </div>
         </main>
     </div>
@@ -164,7 +321,10 @@
                 headers: { "X-CSRFToken": "{{ csrf_token }}" },
                 
                 success : function(data) {
-                    $('.static_box').html(data)
+                    jobj = JSON.parse(data)
+                    console.log(jobj.win_percentage)
+                    // alert(data.win_percentage)
+                    $('#win_percentage').html(jobj.win_percentage)
                     // const port_data = JSON.stringify(data);
                     // var port_data_json = JSON.parse(port_data);
                 },
@@ -173,32 +333,11 @@
                     // alert("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error)
                     }
                 });
-            
             }
 
     </script>
 
     <style>
-        .loading{
-            width: 5em;
-            margin: 0px 5px;
-            height: 35px;
-            font-size: 13px;
-            font-weight: bold;
-
-            background: #505b6a !important;
-            border: #505b6a !important;
-        }
-        .loading:hover{
-            background: black !important;
-        }
-
-        .warning_text{
-            font-size: 12px;
-            color: #4c4545;
-        }
-        
-
 
     </style>
 
