--- a/kimzusik/templates/static/css/main.css
+++ b/kimzusik/templates/static/css/main.css
@@ -31,7 +31,7 @@
     border: 1px solid #adadad94;
     border-radius: 6px;
     height: fit-content;
-    min-height: 50rem;
+    /* min-height: 50rem; */
 }
 
 .logo_box{
@@ -123,3 +123,67 @@ a.button {
     padding: 10px;
     border-top: 1px solid #9191915e;
   }
+
+  .loading{
+    width: 5em;
+    margin: 0px 5px;
+    height: 35px;
+    font-size: 13px;
+    font-weight: bold;
+
+    background: #505b6a !important;
+    border: #505b6a !important;
+}
+.loading:hover{
+    background: black !important;
+}
+
+.warning_text{
+    font-size: 12px;
+    color: #4c4545;
+}
+
+.explain_box{
+    justify-content: space-around;
+}
+
+.explain_text{
+    font-size: 10px;
+    align-self: center;
+}
+
+.explain_prct{
+    font-size: 20px;
+    align-self: center;
+    font-weight: bold;
+    text-align: start;
+    color: #2b3d70;
+    /* color: #fd4848;
+    color: #3636cf; */
+}
+
+.sub_info{
+    font-size: 38px;
+    font-weight: bold;
+    color: #2b3d70;
+}
+
+.title_info{
+    font-size: 14px;
+    color: #545454;
+    padding-bottom: 7px;
+}
+.recommend_info{
+    font-size: 30px;
+    font-weight: bold;
+    color: #2b3d70;
+}
+.sub_recommend{
+    border: 1px solid;
+    padding: 2px 7px;
+    font-size: 11px;
+    border-radius: 20px;
+    background: #3aa394;
+    color: white;
+    width: fit-content;
+}
