--- a/kimzusik/static/css/main.css
+++ b/kimzusik/static/css/main.css
@@ -178,6 +178,12 @@ li{
   font-weight: bold;
   color: #2b3d70;
 }
+
+.recommend_txt{
+  font-size: 17px;
+  padding-left: 5px;
+}
+
 .sub_recommend{
   border: 1px solid;
   padding: 2px 7px;
@@ -186,6 +192,11 @@ li{
   background: #3aa394;
   color: white;
   width: fit-content;
+}
+
+.leading_text{
+  font-weight: bold;
+  color: #ff4545;
 }
 
 .imgs{
